--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     border:0;
-    height: 2000px;
+    height: 1300px;
     /*background-color: rgb(240,255,200);*/
   }
   p{
@@ -18,11 +18,13 @@
 /* got the nav bar here  html information for nav bars found here https://www.w3schools.com/css/css_navbar.asp*/
   header {
     width: 100%;
+    height: 100px;
     background-color: rgb(59, 64, 57);
+    
   }
 
   nav{
-    float: none;
+    float: inline-start;
     position: relative;
     display: flex;
     margin: 0 auto;
@@ -32,16 +34,12 @@
 
   header nav ul li{
     list-style-type: none;
-    padding: 1px;
+    
     
   }
 
   header nav ul {
     display: inline-block;
-  }
-
- 
-  ul{
     vertical-align: center;
     list-style-type: none;
     margin: 0 auto;
@@ -69,16 +67,18 @@
   header nav ul li img {
     width: 200px;
     height: 70px;
-
+    
+  }
 /*the code bellow is for the top box that has for elements  hero960x450 and three elements with a size of300x375*/
 
 /* this has the hero picture*/
-  }
+ 
   main{
     margin: 0 auto;
     width: 960px;
-    height: 2000px;
-    background-color: rgb(70, 235, 223) ;
+    height: 480px;
+    background-color: rgb(70, 235, 223);
+    margin-top: 30px;
   }
   main div section{
     background-color: rgb(224, 230, 184);
@@ -94,19 +94,39 @@
   
 
   /*this will have the section with the table data*/
+  section{
+    border: 0;
+    margin: 0 auto;
+    width: 960px;
+    height: 500px;
+    background-color: rgb(170, 235, 223);
+  }
 
-  table{
+  /*table{
     border-collapse: collapse;
     border-spacing: 0;
+  }*/
+  section h3{
+    text-align: center;
+  }
+  section form{
+    display: inline;
+  }
+  form input{
+    height: 30px;
+    width: 100px;
   }
 
-  /*main div img #bannerleft{
-    
-footer{
+  footer{
+    display: inline-block;
+    vertical-align: bottom;
     background-color: rgb(59, 64, 57);
     width: 100%;
-    height: 300px;
+    height: 100px;
   }
+  /*main div img #bannerleft{
+    
+f
  /*
 
 }
